--- a/newsroom/styles/style.css
+++ b/newsroom/styles/style.css
@@ -2238,7 +2238,7 @@ body img {
 }
 
 .nav__logo:after {
-    background-image: url(../images/logo.svg);
+    background-image: url(/assets/images/logo.svg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
