--- a/newsroom/styles/style.css
+++ b/newsroom/styles/style.css
@@ -141,6 +141,14 @@ body a {
     transition: color 0.25s cubic-bezier(0.33, 1, 0.68, 1)
 }
 
+bady a:hover{
+    text-decoration: none;
+}
+
+.pagebody-copy a:hover{
+    text-decoration: underline;
+}
+
 body button,body input,body select,body textarea {
     font-family: 'Calibre', Sans-Serif;
     font-style: normal;
