--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,7 @@ body {
     font-family: 'Calibre', Sans-Serif;
     font-style: normal;
     font-weight: 400;
-    background: #FCF5ED;
+    background: #FFF;
     color: #261B23;
     font-size: 18px;
     font-smoothing: antialiased;
@@ -544,7 +544,9 @@ body img {
     height: auto !important;
     line-height: 0 !important;
     margin-bottom: -5px;
-    margin-top: -7px
+    margin-top: -7px;
+    font-family: Calibre;
+    font-size: 19px;
 }
 
 .common-button--text span {
